--- a/src/App.css
+++ b/src/App.css
@@ -149,11 +149,13 @@ h6 {
     max-width: 1170px;
     margin: 0 auto;
     display: flex;
+    justify-content: space-between;
   }
   .nav-links {
     height: auto;
     display: flex;
     margin-left: 4rem;
+    margin-top: 7px;
   }
   .nav-links a {
     margin: 0 1rem;
